audio verification added

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.1.2
 zipp==3.8.0
+opencv-python==4.6.0.66
+scikit-image==0.19.3
+SpeechRecognition = 3.8.1
